--- a/src/containers/MainPageHeader/MainPageHeader.module.css
+++ b/src/containers/MainPageHeader/MainPageHeader.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    background: linear-gradient(to bottom, #FFFFFF 55%, #FEE8C5 45%);
 }
 
 .header__group {
