--- a/src/containers/MainPageHeader/MainPageHeader.module.css
+++ b/src/containers/MainPageHeader/MainPageHeader.module.css
@@ -7,6 +7,6 @@
 
 .header__group {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    justify-content: space-between;
 }
