--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -31,6 +31,11 @@
     position: absolute;
     top: 30px;
     right: 30px;
+    cursor: pointer;
+}
+
+.navigation__hamburger {
+    cursor: pointer;
 }
 
 .navigation__list {
