Add header link button

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 }
 
 .container {
-  max-width: 1440px;
+  width: 1440px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
