--- a/src/containers/MainPageHeader/MainPageHeader.module.css
+++ b/src/containers/MainPageHeader/MainPageHeader.module.css
@@ -5,8 +5,20 @@
     background: linear-gradient(to bottom, #FFFFFF 55%, #FEE8C5 45%);
 }
 
+.header__holder {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .header__group {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+}
+
+.header__column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
