Add the info header circle and the function of rotation for it

--- a/src/containers/MainPageHeader/MainPageHeader.module.css
+++ b/src/containers/MainPageHeader/MainPageHeader.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    background: linear-gradient(to bottom, #FFFFFF 634px, #FEE8C5 45%);
+    background: linear-gradient(to bottom, #FFFFFF 633px, #FEE8C5 45%);
     padding-bottom: 25px;
 }
 
@@ -24,17 +24,30 @@
     align-items: flex-end;
 }
 
+.header__title {
+    position: absolute;
+    top: 633px;
+    margin: 0 -750px;
+    z-index: 0;
+    left: 50%;
+    width: auto;
+}
+
+.header__circle {
+    position: absolute;
+    top: -300px;
+    left: -150px;
+    display: block;
+    width: 870px;
+    height: 870px;
+}
+
 .header__vegan {
     font-family: Roboto, sans-serif;
-    position: absolute;
-    top: 634px;
     font-style: normal;
     font-weight: 900;
     font-size: 470px;
     line-height: 302px;
     text-transform: uppercase;
     color: #FDCF7D;
-    margin: 0 -750px;
-    z-index: 0;
-    left: 50%;
 }
