add buttons styling & layout for

--- a/src/containers/MainPageContent/MainPageContent.module.css
+++ b/src/containers/MainPageContent/MainPageContent.module.css
@@ -3,16 +3,42 @@
 }
 
 .generator__container {
-  max-width: 1220px;
+  position: relative;
+  max-width: 1080px;
   margin: 0 auto;
   padding: 250px 0;
   border-radius: 20px;
   background-color: #ee738d;
-
+  background: url('../../images/content/combogenerator.png') no-repeat center/contain;
   text-align: center;
+}
+
+.text {
+  color: #1B1B1B;
+  font-size: 22px;
+  margin-top: 55px;
+  margin-bottom: 45px;
 }
 
 .link_button {
   display: block;
+  max-width: 398px;
   background-color: #fdcf7d;
+  margin: 0 auto; 
+  padding: 15px 0;
+  text-align: center;
+}
+
+.link_button__generator {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 508px;
+  max-width: 508px;
+}
+
+.link_button:hover {
+  background-color: #ffb229;
 }
