--- a/src/containers/MainPageContent/MainPageContent.module.css
+++ b/src/containers/MainPageContent/MainPageContent.module.css
@@ -9,7 +9,7 @@
   padding: 250px 0;
   border-radius: 20px;
   background-color: #ee738d;
-  background: url('../../images/content/combogenerator.png') no-repeat center/contain;
+  background: url('../../images/content/combogenerator.png') no-repeat center/cover;
   text-align: center;
 }
 
