--- a/src/components/ContentPromoItems/ContentPromoItems.module.css
+++ b/src/components/ContentPromoItems/ContentPromoItems.module.css
@@ -2,6 +2,13 @@
   list-style: none;
   display: flex;
   padding: 0;
+  width: 100%;
+  margin: 70px auto 0;
+  justify-content: space-between;
+}
+
+.promo__item {
+  width: 254px;
 }
 
 .promo__item:not(:last-child) {
@@ -10,20 +17,61 @@
 
 .promo__cover {}
 
-.promo__link {}
+.promo__link {
+  position: relative;
+}
 
 .promo__link:hover {}
 
-.promo__description {}
+.promo__description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+  margin-bottom: 8px;
+}
 
-.promo__name {}
+.promo__name {
+  margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 100%;
+  color: #1B1B1B;
+  width: 170px;
+}
 
 .promo__price {}
 
-.promo__volume {}
+.promo__volume {
+}
 
-.promo__buy {}
+.promo__buy {
+  position: absolute;
+  bottom: 12px;
+  right: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px 9px 4px 4px;
+  background: #FFFFFF;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.12);
+  border-radius: 25px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  color: #1B1B1B;
+}
 
 .promo__link:hover .promo__buy {}
 
-.promo__icon {}
+.promo__icon {
+  padding: 5px 6px;
+  background: #FFFFFF;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.12);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 13px;
+}
