--- a/src/components/HeaderPromoItems/HeaderPromoItems.module.css
+++ b/src/components/HeaderPromoItems/HeaderPromoItems.module.css
@@ -4,6 +4,19 @@
     margin-top: 60px;
     position: relative;
     z-index: 2;
+    animation: appearance 0.3s ease-in 1;
+    animation-fill-mode: both;
+}
+
+@keyframes appearance {
+    0% {
+        margin-right: -50px;
+        opacity: 0;
+    }
+    100% {
+        margin-right: 0;
+        opacity: 1;
+    }
 }
 
 .promo__item {
@@ -77,10 +90,6 @@
     color: #1B1B1B;
     transition: all 0.2s;
 }
-
-/*.promo__link:hover .promo__buy {*/
-/*    right: 38px;*/
-/*}*/
 
 .promo__icon {
     padding: 7px 8px;
