--- a/src/components/ContentPromoItems/ContentPromoItems.module.css
+++ b/src/components/ContentPromoItems/ContentPromoItems.module.css
@@ -3,7 +3,7 @@
   display: flex;
   padding: 0;
   width: 100%;
-  margin: 70px auto 0;
+  margin: 70px auto;
   justify-content: space-between;
 }
 
