--- a/src/containers/MainPageWidgets/MainPageWidgets.module.css
+++ b/src/containers/MainPageWidgets/MainPageWidgets.module.css
@@ -1,3 +1,50 @@
 .MainPageWidgets {
-    padding: 54px 0 244px;
+    padding: 54px 0 100px;
+}
+
+.title {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 75px;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 45px;
+}
+
+.text {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    margin: 0;
+}
+
+.holder {
+    width: 580px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 64px;
+}
+
+.logo {
+    display: block;
+    width: 432px;
+    height: 158px;
+}
+
+.podcasts {
+    width: 50%;
+    height: 130px;
+    background: url("../../images/widgets/podcasts.png") no-repeat center/contain;
 }
