--- a/src/containers/MainPageHeader/MainPageHeader.module.css
+++ b/src/containers/MainPageHeader/MainPageHeader.module.css
@@ -49,7 +49,7 @@
   font-size: 470px;
   line-height: 340px;
   text-transform: uppercase;
-  color: #FDCF7D;
+  color: #FFDEA3;
 }
 
 .header__link {
