--- a/src/components/HeaderSlider/HeaderSlider.module.css
+++ b/src/components/HeaderSlider/HeaderSlider.module.css
@@ -1,9 +1,11 @@
 .slider {
     width: 528px;
-    height: 636px;
+    height: 633px;
     animation: appearance 0.3s ease-in 1;
     animation-fill-mode: both;
     z-index: 2;
+    border-radius: 0 20px 20px 0;
+    overflow: hidden;
 }
 
 @keyframes appearance {
@@ -18,7 +20,6 @@
 .slider__item {
     width: 100%;
     height: 100%;
-    border-radius: 0 0 20px 0;
 }
 
 .slider__text {
