--- a/src/components/CatalogueMenu/CatalogueMenu.module.css
+++ b/src/components/CatalogueMenu/CatalogueMenu.module.css
@@ -1,103 +1,40 @@
-.promo {
+.CatalogueMenu {
     list-style: none;
-    font-family: Roboto, sans-serif;
-    margin-top: 60px;
-    position: relative;
-    z-index: 2;
-    animation: appearance 0.3s ease-in 1;
-    animation-fill-mode: both;
-}
-
-@keyframes appearance {
-    0% {
-        margin-right: -50px;
-        opacity: 0;
-    }
-    100% {
-        margin-right: 0;
-        opacity: 1;
-    }
-}
-
-.promo__item {
-    border-radius: 20px;
-    display: block;
-    margin-bottom: 30px;
-}
-
-.promo__item:hover .promo__link {
-    margin-left: -26px;
-}
-
-.promo__link {
-    display: block;
-    position: relative;
-    transition: all 0.2s;
-    width: 370px;
-    height: 258px;
-    background: #EE738D;
-    border-radius: 20px;
-}
-
-.promo__description {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 17px;
-    margin-bottom: 8px;
-}
-
-.promo__name {
-    width: 245px;
+    padding: 0;
     margin: 0;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 23px;
-    color: #1B1B1B;
-}
-
-.promo__price {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 22px;
-    line-height: 26px;
-    color: #1B1B1B;
-}
-
-.promo__volume {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #1B1B1B;
-}
-
-.promo__buy {
-    position: absolute;
-    bottom: 12px;
-    right: 12px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 5px 12px 5px 5px;
-    background: #FFFFFF;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.12);
-    border-radius: 25px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: #1B1B1B;
-    transition: all 0.2s;
+    flex-wrap: wrap;
 }
 
-.promo__icon {
-    padding: 7px 8px;
-    background: #FFFFFF;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.12);
-    border-radius: 50%;
+.item {
+    border-radius: 20px;
+    height: 246px;
+    width: 224px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    margin-bottom: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 13px;
 }
+
+.item:nth-child(n+3):nth-child(-n+4) {
+    width: 304px;
+}
+
+.title {
+    background: #FDCF7D;
+    border-radius: 6px;
+    padding: 10px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    display: inline-block;
+    text-align: center;
+    color: #1B1B1B;
+}
+
