--- a/src/containers/CartPageContent/CartPageContent.module.css
+++ b/src/containers/CartPageContent/CartPageContent.module.css
@@ -112,3 +112,10 @@
   align-items: center;
   color: #1B1B1B;
 }
+
+.instruction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25vh auto;
+}
