--- a/src/containers/MainPageContent/MainPageContent.module.css
+++ b/src/containers/MainPageContent/MainPageContent.module.css
@@ -1,45 +1,28 @@
 .MainPageContent {
   background-color: #FFFFFF;
-  background: url('../../images/backgrounds/main_page_bg.jpg') no-repeat top/contain;
+  background: url('../../images/backgrounds/main_page_bg.jpg') repeat center/contain;
+  padding-top: 55px;
 }
 
-.generator__container {
+.generator_container {
   position: relative;
   max-width: 1080px;
   margin: 0 auto;
   padding: 250px 0;
   border-radius: 20px;
   background-color: #ee738d;
-  background: url('../../images/content/combogenerator.png') no-repeat center/cover;
+  background: url('../../images/content/combogenerator.jpg') no-repeat center/cover;
   text-align: center;
 }
 
 .text {
   color: #1B1B1B;
   font-size: 22px;
-  margin-top: 55px;
+  margin-top: 0;
   margin-bottom: 45px;
 }
 
-.link_button {
-  display: block;
-  max-width: 398px;
-  background-color: #fdcf7d;
-  margin: 0 auto; 
-  padding: 15px 0;
-  text-align: center;
-}
-
-.link_button__generator {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-
-  width: 508px;
-  max-width: 508px;
-}
-
-.link_button:hover {
-  background-color: #ffb229;
+.holder {
+  display: flex;
+  justify-content: center;
 }
