--- a/src/components/ContentPromoItems/ContentPromoItems.module.css
+++ b/src/components/ContentPromoItems/ContentPromoItems.module.css
@@ -22,6 +22,11 @@
 
 .promo__link {
   position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 254px;
+  height: 200px;
 }
 
 .promo__link:hover {}
@@ -77,4 +82,26 @@
   align-items: center;
   justify-content: center;
   margin-right: 13px;
+}
+
+@media screen and (max-width: 380px) {
+  .promo {
+    flex-direction: column;
+    margin: 0;
+    padding-top: 270px;
+  }
+
+  .promo__item {
+    width: 100%;
+    margin: 0 0 26px;
+  }
+
+  .promo__container {
+    width: 100%;
+  }
+
+  .promo__link {
+    width: 100%;
+  }
+
 }
