--- a/src/components/HeaderPromoItems/HeaderPromoItems.module.css
+++ b/src/components/HeaderPromoItems/HeaderPromoItems.module.css
@@ -20,7 +20,6 @@
 }
 
 .promo__item {
-    border-radius: 20px;
     display: block;
     margin-bottom: 30px;
 }
@@ -36,11 +35,7 @@
     width: 370px;
     height: 258px;
     background: #EE738D;
-}
-
-.promo__container {
     border-radius: 20px;
-    overflow: hidden;
 }
 
 .promo__description {
@@ -104,4 +99,33 @@
     align-items: center;
     justify-content: center;
     margin-right: 13px;
+}
+
+@media screen and (max-width: 769px) {
+    .promo__link {
+        width: 292px;
+        height: 200px;
+    }
+    .promo__name {
+        width: auto;
+    }
+    .promo__price {
+        white-space: nowrap;
+    }
+
+    .promo__item:hover .promo__link {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .promo {
+        padding: 0;
+        width: 100%;
+    }
+
+    .promo__link {
+        width: 100%;
+        height: 200px;
+    }
 }
