--- a/src/components/OrderForm/OrderForm.module.css
+++ b/src/components/OrderForm/OrderForm.module.css
@@ -47,23 +47,23 @@
     flex-wrap: wrap;
 }
 
-.input:nth-child(1) {
+.input:nth-child(1), .input:nth-child(2){
     width: 100%;
 }
 
-.input:nth-child(2) {
+.input:nth-child(3) {
     width: 182px;
 }
 
-.input:nth-child(3), .input:nth-child(7) {
+.input:nth-child(4), .input:nth-child(8) {
     width: 162px;
 }
 
-.input:nth-child(n+4):nth-child(-n+6) {
+.input:nth-child(n+5):nth-child(-n+7) {
     width: 50px;
 }
 
-.input:nth-child(n+8) {
+.input:nth-child(n+9) {
     width: 100%;
 }
 
@@ -109,3 +109,38 @@
     color: #DBC3CB;
     pointer-events: none;
 }
+
+@media screen and (max-width: 769px) {
+    .OrderForm {
+        margin: 32px auto 0;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .OrderForm {
+        width: 100%;
+        left: 0;
+        padding: 16px calc((100vw - 342px)/2) 90px;;
+    }
+
+    .input:nth-child(1), .input:nth-child(2){
+        width: 100%;
+    }
+
+    .input:nth-child(3) {
+        width: 150px;
+    }
+
+    .input:nth-child(4), .input:nth-child(8) {
+        width: 150px;
+    }
+
+    .input:nth-child(n+5):nth-child(-n+7) {
+        width: 45px;
+    }
+
+    .input:nth-child(n+9) {
+        width: 100%;
+    }
+}
+
