--- a/src/containers/CataloguePageContent/CataloguePageContent.module.css
+++ b/src/containers/CataloguePageContent/CataloguePageContent.module.css
@@ -53,3 +53,28 @@
   font-weight: bold;
   margin-top: 20px;
 }
+
+@media screen and (max-width: 769px) {
+  .CataloguePageContent {
+    padding-bottom: 64px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .CataloguePageContent {
+    padding-bottom: 0;
+  }
+
+  .banner {
+    display: none;
+  }
+
+  .holder {
+    flex-direction: column;
+  }
+
+  .column {
+    width: 100%;
+    margin: 0 0 20px;
+  }
+}
